--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,4 @@
 <script>
-  document.write("Hello World");
+  document.write("Hello World! I am THE ONE THE ONLY Lorenzo Antonio M. Lustre -- CN14 of 9 - Rubidium. Be ready to be amazed by my amazingness. 'Yun lang THENKS!");
   
 </script>
